k8s/infra/dev/keycloack/keycloak-service.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: smartcity
  labels:
    app: keycloak
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: smartcity
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443
  - name: admin
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: keycloak
    app.kubernetes.io/name: keycloak
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-admin
  namespace: smartcity
  labels:
    app: keycloak
    app.kubernetes.io/name: keycloak-admin
    app.kubernetes.io/component: admin
    app.kubernetes.io/part-of: smartcity
spec:
  type: ClusterIP
  ports:
  - name: admin
    port: 9990
    protocol: TCP
    targetPort: 9000
  selector:
    app: keycloak
    app.kubernetes.io/name: keycloak
