k8s/infra/dev/keycloack/keycloak-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: keycloak-network-policy
  namespace: smartcity
  labels:
    app: keycloak
    app.kubernetes.io/name: keycloak-network-policy
    app.kubernetes.io/component: network-policy
    app.kubernetes.io/part-of: smartcity
spec:
  podSelector:
    matchLabels:
      app: keycloak
      app.kubernetes.io/name: keycloak
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 8443
    - protocol: TCP
      port: 9000
  - from:
    - podSelector:
        matchLabels:
          app: smartcity-app
    ports:
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 8443
  - from:
    - podSelector:
        matchLabels:
          app: argocd-server
    ports:
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 8443
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres
    ports:
    - protocol: TCP
      port: 5432
  - to: []
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
